# storageclean

./: .gitignore  README.md  pyproject.toml  setup.cfg
storageclean/: __init__.py  cli.py  config.py  operations.py  scanner.py  transfer.py  ui.py
